gogs/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gogs-deployment
  labels:
    app: gogs
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gogs
  template:
    metadata:
      labels:
        app: gogs
    spec:
      volumes:
      - name: vol
        persistentVolumeClaim:
          claimName: gogs-csi-vol
      containers:
      - name: gogs 
        image: gogs/gogs
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 50Mi
        ports:
          - containerPort:  3000
            name:  "git"
          - containerPort:  22
            name:  "ssh"
        volumeMounts:
          - mountPath: /data
            name: vol
      restartPolicy: Always
---
