gogs/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: gogservice
spec:
  selector:
    app:  gogs
  type:  ClusterIP
  ports:
  - name:  gogservice
    port:  3000
    targetPort:  3000
