gogs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gog
  namespace: gogs
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: git.host.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gogservice
            port:
              number: 3000
